--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,14 +13,31 @@
     <div class="valid-feedback">Valid.</div>
     <div class="invalid-feedback">Please fill out this field.</div>
   </div>
-  <div class="form-group form-check">
-    <label class="form-check-label">
-      <input class="form-check-input" type="checkbox" name="remember" required> I agree on policy.
-      <div class="valid-feedback">Valid.</div>
-      <div class="invalid-feedback">Check this checkbox to continue.</div>
-    </label>
-  </div>
+  
   <p><button type="submit" class="btn btn-success">Submit</button>&nbsp;&nbsp;
     <button type="button" class="btn btn-primary" (click)="gotoRegister()">Register</button></p>
 </form>
+</div>
+
+<div class="modal fade" id="ModalFail">
+  <div class="modal-dialog">
+    <div class="modal-content">
+
+      <!-- Modal Header -->
+      <div class="modal-header">
+        <h4 class="modal-title">Error</h4>
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+      </div>
+
+      <!-- Modal body -->
+      <div class="modal-body">
+        Email or Password was wrong
+      </div>
+
+      <!-- Modal footer -->
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-dismiss="modal" >OK</button>
+      </div>
+    </div>
+  </div>
 </div>
